<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dinsfire.ponymotes.MainActivity" >

    <item android:id="@+id/action_updateDatabase" android:orderInCategory="1" android:title="@string/updateDatabase" android:titleCondensed="@string/updateDatabaseCompressed"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_help" android:title="@string/help" android:orderInCategory="101"></item>
    <item android:id="@+id/action_about" android:title="@string/about" android:orderInCategory="102"></item>
    

</menu>
